@@ -10,6 +10,9 @@ Pint Changelog
 - Add `dim_sort` function to _formatter_helpers.
 - Add `dim_order` and `default_sort_func` properties to FullFormatter.
   (PR #1926, fixes Issue #1841)
+- Fixed bug causing operations between arrays of quantity scalars and quantity holding
+  array resulting in incorrect units.
+  (PR #1677)
 - Fix LaTeX siuntix formatting when using non_int_type=decimal.Decimal.
 - Added refractive index units.
   (PR #1816)
